# cpp_inquirer

./: CMakeLists.txt  License.txt  PKGBUILD  README.md  create-release.sh  install.sh
.github/workflows/: aur-publish.yml  ci.yml  templi-generate.yml
.templates/: PKGBUILD.in  cpp_inquirerConfig.hpp.in  create-release.sh.in  install.sh.in
cmake/: cpp_inquirerConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/cpp_inquirer/: color.hpp  cpp_inquirer.hpp  cpp_inquirerConfig.hpp
sources/: CMakeLists.txt  boolean_question.cpp  callback.cpp  cpp_inquirer.cpp  evaluate.cpp  question.cpp  question_builder.cpp  question_factory.cpp  select_question.cpp  text_question.cpp  utils.cpp  utils.hpp  validator.cpp  validator_factory.cpp
